--- a/style.css
+++ b/style.css
@@ -1,3 +1,29 @@
-p {
-  color: red;
+h2{
+  color: green;
+}
+ul{
+  background-color: #f0f0f5;
+}
+ul{
+  border-color: #ffe6e6;
+  border-style: dotted;
+  border-width: thick;
+}
+
+img{
+position: absolute;
+top: 20px;
+right: 25px;
+padding: 10px;
+margin: 5px;
+width: 125px;
+}
+
+li{
+  margin-left: 60px;
+}
+
+body{
+  margin-left: 25px;
+  margin-right: 25px;
 }
